[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ice-rules"
dynamic = ["version"]
description = "Ice Rule Engine Python SDK"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "waitmoon"}
]
keywords = ["ice", "rule-engine", "decision-engine"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/waitmoon/ice"
Documentation = "https://waitmoon.github.io/ice"
Repository = "https://github.com/waitmoon/ice"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
root = "../../.."
